--- a/.github/workflows/slash-command-dispatcher.yaml
+++ b/.github/workflows/slash-command-dispatcher.yaml
@@ -19,8 +19,8 @@ jobs:
       id: generate_token
       uses: tibdex/github-app-token@v1
       with:
-        app_id: ${{ secrets.APP_ID }}
-        private_key: ${{ secrets.PRIVATE_KEY }}
+        app_id: ${{ secrets.DEPLOY_BOT_APP_ID }}
+        private_key: ${{ secrets.DEPLOY_BOT_PRIVATE_KEY }}
 
     - name: Slash Command Dispatch
       uses: peter-evans/slash-command-dispatch@v2
@@ -46,8 +46,8 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@v1
         with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.PRIVATE_KEY }}
+          app_id: ${{ secrets.DEPLOY_BOT_APP_ID }}
+          private_key: ${{ secrets.DEPLOY_BOT_PRIVATE_KEY }}
 
       - name: slash command dispatch
         uses: peter-evans/slash-command-dispatch@v2
