--- a/.github/workflows/e2e-test-deploy.yaml
+++ b/.github/workflows/e2e-test-deploy.yaml
@@ -29,8 +29,8 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SEC }}
+        aws-access-key-id: ${{ secrets.AWS_TEST_ACCOUNT_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_TEST_ACCOUNT_SECRET_ACCESS_KEY }}
         aws-region: 'us-west-1'
     - name: Setup python 3.8
       uses: actions/setup-python@v2
